operator/2.8/reference-couchbasecluster-events.md
---
title: <code>CouchbaseCluster</code> Events
pubDate: 2026-08-17T09:53:44.266Z
antora:
  editUrl: https://github.com/couchbase/docs-operator/edit/release/2.8/modules/ROOT/pages/reference-couchbasecluster-events.adoc
  xref: xref:2.8@operator::reference-couchbasecluster-events.adoc[]
---

[Consult the llms.txt file for a full list of contents](/llms.txt)
[View original HTML](/operator/2.8/reference-couchbasecluster-events.html)

# <code>CouchbaseCluster</code> Events

> Kubernetes events that are raised by the Operator for `CouchbaseCluster` resources. 

Kubernetes can displays extended information about a resource using the `kubectl describe` command. The Operator generated life-cycle events as the cluster is provisioned, edited or repaired. These events may be used for problem determination or as synchronous triggers for external Kubernetes orchestration.

The lifecycle of a `CouchbaseCluster` includes the following events (in no particular order):

## [](#member-lifecycle)Member Lifecycle

MemberCreationFailed

A new member was unable to be created. This may be due to pod scheduling constraints, network issues or TLS configuration.

NewMemberAdded

A new Couchbase node was added to the cluster.

FailedAddNode

A Couchbase node failed to join the cluster.

FailedAddBackNode

A Couchbase node failed to be added back into a cluster after being manually failed over.

MemberRemoved

A Couchbase node was removed from the cluster.

MemberDown

A Couchbase node has been reported as down by its peers.

MemberRecovered

A failed Couchbase node has been recovered from its persistent volume.

MemberFailedOver

A node has either been failed over automatically or manually.

RebalanceStarted

A rebalance operation has started.

RebalanceIncomplete

A rebalance operation has terminated abnormally; nodes may have not been added or ejected as expected.

RebalanceCompleted

A rebalance operation has successfully completed.

ExpandVolumeSucceeded

A volume expansion operation has successfully completed.

ExpandVolumeFallback

A volume expansion operation has failed and the cluster is falling back to a rolling upgrade of volumes.

ExpandVolumeStarted

A volume expansion operation has started.

ReconciliationFailed

A reconciliation operation failed. This may be due to a transient error or a configuration issue.

## [](#cluster-upgrade-lifecycle)Cluster Upgrade Lifecycle

UpgradeStarted

An upgrade operation has started.

UpgradeFinished

An upgrade operation has successfully completed.

> [!NOTE]
> Upgrade events are raised in relation to an upgrade of the entire cluster and not individual nodes. Individual node upgrades will raise `NewMemberAdded`, `RebalanceStarted`, `MemberRemoved` and `RebalanceCompleted` member lifecycle events as members are swapped out for upgraded replacements.

## [](#bucket-lifecycle)Bucket Lifecycle

BucketCreated

A bucket was created.

BucketDeleted

A bucket was deleted.

BucketEdited

A bucket was modified.

## [](#rbac-lifecycle)RBAC Lifecycle

UserCreated

A Couchbase user was created.

UserDeleted

A Couchbase user was deleted.

UserEdited

A Couchbase user was edited.

GroupCreated

A Couchbase group was created.

GroupDeleted

A Couchbase group was deleted.

GroupEdited

A Couchbase group was edited.

## [](#service-lifecycle)Service Lifecycle

ServiceCreated

A cluster service was created.

ServiceDeleted

A cluster service was deleted.

## [](#cluster-lifecycle)Cluster Lifecycle

ClusterSettingsEdited

The cluster specification was modified.

## [](#security-lifecycle)Security Lifecycle

SecuritySettingsUpdated

Security related settings e.g. TLS mode were updated.

AdminPasswordChanged

The administrator password was updated.

## [](#tls-lifecycle)TLS Lifecycle

TLSUpdated

TLS server certificates and keys, and optionally the CA certificate, were updated across the cluster.

TLSInvalid

TLS configuration invalid. Consult the Operator logs for details.

ClientTLSUpdated

TLS client certificate and keys, and optionally the CA certificate, were updated.

ClientTLSInvalid

TLS client configuration invalid. Consult the Operator logs for details.

## [](#xdcr-lifecycle)XDCR Lifecycle

RemoteClusterAdded

A remote cluster reference was created.

RemoteClusterUpdated

A remote cluster reference was updated.

RemoteClusterRemoved

A remote cluster reference was removed.

ReplicationAdded

A replication was created and associated with a remote cluster.

ReplicationRemoved

A replication was deleted and disassociated from a remote cluster.

## [](#backup-lifecycle)Backup Lifecycle

BackupCreated

A periodic backup job was created.

BackupUpdated

A periodic backup job was updated.

BackupDeleted

A periodic backup job was deleted.

BackupStarted

A backup operation has started.

BackupCompleted

A backup operation has completed.

BackupFailed

A backup operation has failed.

BackupRestoreCreated

A restore job was created.

BackupRestoreDeleted

A restore job was deleted. This condition indicates successful completion.

## [](#auto-scaling-lifecycle)Auto-scaling Lifecycle

AutoscalerCreated

An autoscaling resource was created for a server class.

AutoscalerDeleted

An autoscaling resource was deleted for a server class.

AutoscaleUp

An autoscaler requested a server class to be scaled up.

AutoscaleDown

An autoscaler requested a server class to be scaled down.

## [](#network-lifecycle)Network Lifecycle

NetworkSettingsModified

Network settings were updated.

## [](#scopes-and-collections)Scopes and Collections

ScopesAndCollectionsUpdated

Scopes and collections were updated for a bucket.